# quine_advent_calendar_2014

./: README.md
day_001/: README.md
day_002/: README.md  quine.js
day_003/: generate.rb  original.py
day_004/: README.md
day_005/: README.md
day_006/: README.md
day_008/: generater.js
day_01/: generator.rb  quine.rb
day_010/: README.md
day_011/: README.md
day_012/: README.md  quine.printf.gnuplot
day_013/: quine.xxd
day_014/: README.md
day_015/: README.md
day_016/: README.md
day_017/: README.md  quine.rb
day_018/: README.md  quine.gui.tcl
day_019/: README.md
day_020/: README.md
day_022/: README.md
day_024/: README.md
day_028/: README.md
day_03/: README.md  adventar-logo.txt  quine.py
day_031/: README.md  octocat.js
day_032/: README.md
day_035/: README.md
day_036/: README.md
day_038/: README.md
day_039/: README.md
day_040/: README.md
day_043/: README.md
day_045/: README.md
day_046/: README.md
day_047/: README.md
day_048/: README.md
day_049/: README.md
day_05/: README.md
day_053/: README.md
day_057/: README.md
day_058/: README.md
day_060/: Quine.curry
day_061/: README.md  quine.rb
day_062/: README.md
day_063/: README.md
day_065/: README.md
day_066/: README.md
day_07/: README.md  quine.lisp
day_070/: README.md  quine.ws.js
day_071/: README.md
day_072/: README.md
day_074/: README.md
day_075/: README.md
day_08/: README.md  quine.js
day_080/: README.md
day_22/false/: .gitignore  Main.hs  cabal.sandbox.config  false.cabal
day_22/false/Language/False/: Run.hs
(+171 files in other folders)
